--- a/public/styles.css
+++ b/public/styles.css
@@ -40,14 +40,18 @@ body {
 }
 
 .square {
-  height: 50px;
-  width: 50px;
+  height: 48px;
+  width: 48px;
   border: 2px solid rgb(160, 160, 160);
   background-color: white;
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-right: -2px;
-  margin-bottom: -2px;
+  margin-block-start: -2px;
 }
+
+
 
 .leftBlack {
   border-left-color: black;
@@ -72,25 +76,27 @@ body {
 }
 
 .numberDisplay {
-  line-height: 0px;
   font-size: 20px;
   font-weight: 500;
   text-align: center;
+  margin: 0px;
+  margin-block-start: 0px;
+  margin-block-end: 0px;
+
 }
 
 .miniSquare {
   height: 10px;
   width: 10px;
-  display: inline-block;
-  position:relative;
-  bottom: 11px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 2px;
 }
 
 .mini {
   font-size: 10px;
   font-weight: 300;
-  line-height: 0px;
   margin-block-start: 0px;
   margin-block-end: 0px;
   text-align: center;
@@ -102,6 +108,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 16px;
 }
 
 .status {
@@ -109,3 +116,4 @@ body {
   font-size: 15px;
   font-weight: 400;
 }
+
