--- a/client/src/public/styles.css
+++ b/client/src/public/styles.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url("./images/background3.jpg");
+  background-image: url("./images/background7.jpg");
   position: relative;
 }
 
@@ -42,6 +42,8 @@ body {
 .square {
   height: 48px;
   width: 48px;
+  min-width: 48px;
+  min-height: 48px;
   border: 2px solid rgb(160, 160, 160);
   background-color: white;
   display: flex;
@@ -49,6 +51,23 @@ body {
   align-items: center;
   margin-right: -2px;
   margin-block-start: -2px;
+}
+
+.rectangle {
+  height: 48px;
+  width: 150px;
+  min-width: 100px;
+  min-height: 48px;
+  border: 2px solid rgb(160, 160, 160);
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 75px;
+}
+
+.squareIsSelected {
+  background-color: yellow;
 }
 
 .starterSquare {
@@ -115,9 +134,86 @@ body {
   height: 16px;
 }
 
-.status {
+.statusLink {
   text-align: center;
-  font-size: 15px;
+  text-decoration: underline;
+  text-underline-position: below;
+  font-size: 18px;
   font-weight: 400;
+  color: rgb(41, 41, 173);
+  margin-top: 15px;
 }
 
+.statusMsg {
+  background-color: rgba(255, 255, 255, 0.623);
+  border-radius: 15px;
+  padding: 15px;
+  padding-top: 10px;
+  margin-top: 15px;
+  font-size: 15px;
+  font-weight: 400;
+  margin: auto;
+  text-align: left;
+  max-width: 590px;
+  margin-bottom: 30px;
+  line-height: 1.5;
+}
+
+.statusTitle {
+  text-align: center;
+}
+
+.numberSelector {
+  margin-top: 15px;
+}
+
+.selectorSquare {
+  margin-right: 3px;
+  margin-left: 3px;
+  border-radius: 6px;
+  border-color: rgb(109, 109, 109);
+}
+
+.normalOrPossibility {
+  margin-top: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.normalNumberSelector {
+  height: 30px;
+  width: 100px;
+  border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: -1px;
+}
+
+.selected {
+  background-color: black;
+  color: white;
+}
+
+.notSelected {
+  background-color: white;
+  color: black;
+}
+
+.possibilitySelector {
+  height: 30px;
+  width: 120px;
+  border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.contradiction {
+  color: red;
+}
+
+.breathingRoom {
+  margin-bottom: 75px;
+}
